syntax = "proto2";
package MValue;

message BaseObject {
  required uint32 type = 1;
  required string ptr = 2;
}

message Vector3 {
  required float x = 1;
  required float y = 2;
  required float z = 3;
}

message Vector2 {
  required float x = 1;
  required float y = 2;
}

// used when function is exported from go (Go::Runtime::ProtoToMValue)
message InternFunction {
  required string resourceName = 1;
  required uint64 id = 2;
}

// used when function is imported to go (Go::Runtime::MValueToProto(Bytes))
message ExternFunction {
  required string ptr = 1;
}

message RGBA {
  required uint32 r = 1;
  required uint32 g = 2;
  required uint32 b = 3;
  required uint32 a = 4;
}

message MValue {
  // default values
  optional bool noneValue = 1;
  optional bool nilValue = 2;
  optional bool boolValue = 3;
  optional int64 intValue = 4;
  optional uint64 uintValue = 5;
  optional double doubleValue = 6;
  optional string stringValue = 7;

  // nested values
  repeated MValue list = 8;
  repeated string dict = 9;

  // special values
  optional BaseObject baseObjectValue = 10;
  optional InternFunction internFunctionValue = 11;
  optional ExternFunction externFunctionValue = 12;
  optional Vector3 vector3Value = 13;
  optional RGBA rgbaValue = 14;
  optional bytes bytesValue = 15;
  optional Vector2 vector2Value = 16;
}